<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhatISThis-mac</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cow">Cow</string>
    <string name="horse">Horse</string>
    <string name="pig">Pig</string>
    <string name="sheep">Sheep</string>
    <string name="app_header">What is This</string>
    <string name="answer">Answer</string>
    <string name="title_activity_show_answer">ShowAnswer</string>
    <string name="score">Your Score</string>
    <string name="def_score">0</string>
    <string name="playagain">Play Again</string>
    <string name="exit">Exit</string>

</resources>
